--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="main.css">
+	<script src="https://kit.fontawesome.com/ffe91cee1b.js" crossorigin="anonymous"></script>
 	<title>Кружки&Ложки</title>
 </head>
 
@@ -37,6 +38,22 @@
 					Вы попали на сайт компании <span class="logo">Кружки & Ложки</span>. Мы специализируемся на
 					создании
 					кофе с применением таких специй как <i>шафран</i> и <i>кармадон</i>.
+				</p>
+			</div>
+
+			<div class="about_us">
+				<h2>О нас</h2>
+				<p>Наша компания обладает двухсотлетней историей. Мы готовили кофе для Стефана Цвейга, кофе нашего
+					приготовления подавали на стол самому Виктору Гюго, наш кофе выбирает Бенедикт "Какая же сложная
+					фамилия" Кембербетч</p>
+				<p>
+					Компания <span class="logo">Кружки & Ложки</span> была основана в 1819 году обычным французким
+					рабочим, который настолько обожал кофе, что был готов на все ради этого напитка. После открытия
+					кофейня сразу же получила признание и уже 1822 году было больше 10 кофеен нашей сети.
+				</p>
+				<p>
+					Отличаемся мы от конкурентов тем, что тщательно отбираем шафран и кармадон с наших
+					полей, а кофе закупаем только у доверенных поставщиков, с которыми мы работаем уже 15 лет.
 				</p>
 			</div>
 
@@ -129,6 +146,25 @@
 			</section>
 		</div>
 	</main>
+
+	<!-- FOOTER -->
+	<footer>
+		<div class="footer__inner">
+			<h3>Обратная связь</h3>
+			<ul>
+				<li class="contact_with_us">
+					<i class="fas fa-at"></i> <a
+						href="mailto:kruzhki'n'lozhki@example.com">kruzhki'n'lozhki@example.com</a>
+				</li>
+				<li class="contact_with_us">
+					<i class="fas fa-phone-square-alt"></i> <a href="tel:+78005553535">8(800)555-35-35</a>
+				</li>
+				<li class="contact_with_us">
+					<i class="fas fa-map-marked-alt"></i> <span>г. Москва ул. Плюшкина д.75 </span>
+				</li>
+			</ul>
+		</div>
+	</footer>
 </body>
 
 </html>
