it is very big update

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="index.css">
 	<script src="https://kit.fontawesome.com/ffe91cee1b.js" crossorigin="anonymous"></script>
 	<title>Кружки&Ложки</title>
 </head>
@@ -19,11 +20,12 @@
 	 -->
 
 	<header>
-		<div class="header__inner main__header">
+		<div class="header__inner main_header">
 			<div class="container">
-				<div class="logo">
+				<div class="logo ">
 					<h2>Куржки & Ложки</h2>
 				</div>
+				<a class="a-black" href="about_us.html"><i class="fas fa-question-circle"></i></a>
 			</div>
 		</div>
 	</header>
@@ -41,21 +43,7 @@
 				</p>
 			</div>
 
-			<div class="about_us">
-				<h2>О нас</h2>
-				<p>Наша компания обладает двухсотлетней историей. Мы готовили кофе для Стефана Цвейга, кофе нашего
-					приготовления подавали на стол самому Виктору Гюго, наш кофе выбирает Бенедикт "Какая же сложная
-					фамилия" Кембербетч</p>
-				<p>
-					Компания <span class="logo">Кружки & Ложки</span> была основана в 1819 году обычным французким
-					рабочим, который настолько обожал кофе, что был готов на все ради этого напитка. После открытия
-					кофейня сразу же получила признание и уже 1822 году было больше 10 кофеен нашей сети.
-				</p>
-				<p>
-					Отличаемся мы от конкурентов тем, что тщательно отбираем шафран и кармадон с наших
-					полей, а кофе закупаем только у доверенных поставщиков, с которыми мы работаем уже 15 лет.
-				</p>
-			</div>
+
 
 			<!-- PRICE LIST -->
 			<section class="price_list">
