--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../main.css">
     <link rel="stylesheet" href="about_us.css">
     <script src="https://kit.fontawesome.com/ffe91cee1b.js" crossorigin="anonymous"></script>
     <title>О нас</title>
@@ -39,7 +39,7 @@
                         кофейня сразу же получила признание и уже 1822 году было больше 10 кофеен нашей сети.
                     </p>
                     <div class="photo">
-                        <img src="img/cd58353a3c13.jpg">
+                        <img src="../img/cd58353a3c13.jpg">
                     </div>
                 </section>
                 <p>
