--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<div class="logo ">
 					<h2>Куржки & Ложки</h2>
 				</div>
-				<a class="a-black" href="about_us.html"><i class="fas fa-question-circle"></i></a>
+				<a class="a-black" href="pages/about_us.html"><i class="fas fa-question-circle"></i></a>
 			</div>
 		</div>
 	</header>
