--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="header__inner main_header">
 			<div class="container">
 				<div class="logo ">
-					<h2>Куржки & Ложки</h2>
+					<h2><a href="index.html"> Куржки & Ложки</a></h2>
 				</div>
 				<a class="a-black" href="pages/about_us.html"><i class="fas fa-question-circle"></i></a>
 			</div>
@@ -137,7 +137,7 @@
 
 	<!-- FOOTER -->
 	<footer>
-		<div class="footer__inner">
+		<div class="footer__inner container">
 			<h3>Обратная связь</h3>
 			<ul>
 				<li class="contact_with_us">
