--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -16,7 +16,7 @@
         <div class="header__inner main_header">
             <div class="container">
                 <div class="logo ">
-                    <h2>Куржки & Ложки</h2>
+                    <h2><a href="../index.html"> Куржки & Ложки</a></h2>
                 </div>
                 <a class="a-black" href="about_us.html"><i class="fas fa-question-circle"></i></a>
             </div>
